--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,5 @@
 {
     "files.associations": {
-        "iostream": "cpp",
-<<<<<<< Updated upstream
         "algorithm": "cpp",
         "atomic": "cpp",
         "bit": "cpp",
@@ -23,6 +21,7 @@
         "initializer_list": "cpp",
         "ios": "cpp",
         "iosfwd": "cpp",
+        "iostream": "cpp",
         "istream": "cpp",
         "iterator": "cpp",
         "limits": "cpp",
@@ -31,6 +30,7 @@
         "new": "cpp",
         "optional": "cpp",
         "ostream": "cpp",
+        "random": "cpp",
         "stdexcept": "cpp",
         "streambuf": "cpp",
         "string": "cpp",
@@ -53,8 +53,5 @@
         "xstring": "cpp",
         "xtr1common": "cpp",
         "xutility": "cpp"
-=======
-        "vector": "cpp"
->>>>>>> Stashed changes
     }
 }
